--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "babel-plugin-macros": "^3.1.0",
+    "firebase": "^9.9.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-burger-menu": "^3.0.8",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-scroll": "^1.8.7"
   },
   "devDependencies": {
     "eslint": "8.20.0",
