--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@jswork/next-local-storage": "^1.0.4",
     "babel-plugin-macros": "^3.1.0",
     "email-validator": "^2.0.4",
     "firebase": "^9.9.1",
     "formik": "^2.2.9",
+    "local-storage": "^2.0.0",
     "next": "12.2.3",
     "password-validator": "^5.3.0",
     "react": "18.2.0",
